fix side bar covering the card issue and clean up code a bit

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -7,6 +7,7 @@
   background-color: #fff;
   margin-top: 3rem;
   margin-left: 1.5rem;
+  z-index: 1;
 }
 
 .card-image {
